--- a/01_사업소개_03_조직체계 및 추진내용.html
+++ b/01_사업소개_03_조직체계 및 추진내용.html
@@ -158,74 +158,152 @@
                         <a href="#">사업소개</a>
                     </li>
                     <li>
-                        <a href="./index.html">과제목표 및 추진전략</a>
+                        <a href="./index.html">조직체계 및 추진내용</a>
                     </li>
                 </ol>
             </div>
             <section class="inner-wrap business-cont">
-                <h2 class="h2-title">과제목표 및 추진전략</h2>
+                <h2 class="h2-title">조직체계 및 추진내용</h2>
                 <div class="inner">
-                    <span class="box-visual"></span>
-                    <div class="box-radius cont">
-                        <p class="txt-intro">
-                            지역 인구 감소 문제 해결, 지역경제 활력을 되찾기 위해,<span class="br-mo"></span>
-                            청년층 고용 확대와 지역 정착 유도, 중장년층이 정주할 수 있는 환경 조성추진
-                        </p>
-                        <ul class="list-diagram">
+                    <p class="box-radius hue">
+                        생애주기별(청년~고령층) 맞춤형 직업역량 프로그램으로 지역민의 전생애 경력개발 지원
+                    </p>
+                    <div class="box-area col-3 first">
+                        <div class="box-radius tit">
+                            <h4 class="tit">주관부서</h4>
+                            <dl class="list-tit">
+                                <dt>평생교육원, 지역협력센터</dt>
+                                <dd>생애주기별 설계ㆍ운영 총괄, <span class="br-mo"></span>지역 기반 수요 연계 지원</dd>
+                            </dl>
+                        </div>
+                        <div class="box-radius tit">
+                            <h4 class="tit">협력부서</h4>
+                            <dl class="list-tit">
+                                <dt>취창업지원센터, 수학습지원센터</dt>
+                                <dd>학습 수준 진단, 경력개발 연계, <span class="br-mo"></span>교육운영 품질관리 수행</dd>
+                            </dl>
+                        </div>
+                        <div class="box-radius tit">
+                            <h4 class="tit">참여기관</h4>
+                            <dl class="list-tit last">
+                                <dt>천안시ㆍ충남도 평생교육기관, <span class="br-mo"></span>고용노동부, 지역NPO</dt>
+                                <dd>대상자 연계, 프로그램 홍보 및 실무 참여, <span class="br-mo"></span>수료 후 연계 자문 제공</dd>
+                            </dl>
+                        </div>
+                    </div>
+                    <h3 class="icon-sub-tit">추진내용</h3>
+                    <p class="box-radius hue">
+                        청년층 직무적응, 중장년 경력전환, 고령층 재취업 등 대상별 맞춤형 교육 운영
+                    </p>
+                    <div class="box-area col-3 col-type-wrap">
+                        <ul class="box-radius">
                             <li>
-                                <strong class="tit">지역산업 <span class="br-mo"></span>성장동력 강화</strong>
-                                <b class="emphasis">지역 소멸 위기 대응</b>
-                                <span class="txt">지역산업 성장으로 <br>청년 인구 증가와 경제 활성화</span>
+                                <span class="label">맞춤형 프로그램</span>
+                                <span class="txt">ITㆍ디지털 인재 양성</span>
                             </li>
                             <li>
-                                <strong class="tit">지역수요 맞춤형 <span class="br-mo"></span>인재 양성</strong>
-                                <b class="emphasis">지역 산업 수요 대응</b>
-                                <span class="txt">지역 산업체 인력수요 불일치 <br>해소를 위한 교육과정 개선</span>
+                                <span class="label">연령층</span>
+                                <span class="txt">청년층</span>
                             </li>
                             <li>
-                                <strong class="tit">지역 정주환경 <span class="br-mo"></span>개선</strong>
-                                <b class="emphasis">지역 정주 여건 개선</b>
-                                <span class="txt">지역 내 취업 및 정주로 <br>이어지는 선순환 구조 마련</span>
+                                <span class="label">대상자</span>
+                                <span class="txt">미취업청년</span>
+                            </li>
+                            <li>
+                                <span class="label">주요 교육내용</span>
+                                <span class="txt normal">AI, 빅데이터, UI/UX, 코딩 등</span>
                             </li>
                         </ul>
-                        <h3 class="icon-sub-tit">추진전략</h3>
-                        <p class="box-radius shadow">생애주기별 직무교육과 AI기반 학습을 통해 지역맞춤형 평생직업교육체계 구축</p>
-                        <div class="box-area col-2">
-                            <div class="box-radius tit">
-                                <h4 class="tit">중소ㆍ중견기업 재직자 교육</h4>
-                                <div class="box-area col-2">
-                                    <dl class="list-dot">
-                                        <dt>지속가능</dt>
-                                        <dd>지역 거버넌스</dd>
-                                        <dd>사회적 이슈 교육</dd>
-                                        <dd>평생학습 생태계</dd>
-                                    </dl>
-                                    <dl class="list-dot">
-                                        <dt>AIㆍ디지털</dt>
-                                        <dd>AI기반 교육</dd>
-                                        <dd>디지털기반 교육</dd>
-                                        <dd>스마트 융합교육</dd>
-                                    </dl>
-                                </div>
-                            </div>
-                            <div class="box-radius tit">
-                                <h4 class="tit">취약계층 입직 희망자 교육</h4>
-                                <div class="box-area col-2">
-                                    <dl class="list-dot">
-                                        <dt>생애주기</dt>
-                                        <dd>입직자 교육</dd>
-                                        <dd>재직자 교육</dd>
-                                        <dd>이·전직 교육</dd>
-                                    </dl>
-                                    <dl class="list-dot">
-                                        <dt>지역맞춤</dt>
-                                        <dd>충남 전략사업</dd>
-                                        <dd>수요맞춤형</dd>
-                                        <dd>직업교육 고도화</dd>
-                                    </dl>
-                                </div>
-                            </div>
-                        </div>
+                        <ul class="box-radius">
+                            <li>
+                                <span class="label">맞춤형 프로그램</span>
+                                <span class="txt">직무 복귀형</span>
+                            </li>
+                            <li>
+                                <span class="label">연령층</span>
+                                <span class="txt">중장년층</span>
+                            </li>
+                            <li>
+                                <span class="label">대상자</span>
+                                <span class="txt">경력단절여성</span>
+                            </li>
+                            <li>
+                                <span class="label">주요 교육내용</span>
+                                <span class="txt normal">OA, ERP, 자격과정 등</span>
+                            </li>
+                        </ul>
+                        <ul class="box-radius">
+                            <li>
+                                <span class="label">맞춤형 프로그램</span>
+                                <span class="txt">직무 고도화</span>
+                            </li>
+                            <li>
+                                <span class="label">연령층</span>
+                                <span class="txt">중장년층</span>
+                            </li>
+                            <li>
+                                <span class="label">대상자</span>
+                                <span class="txt">재직자</span>
+                            </li>
+                            <li>
+                                <span class="label">주요 교육내용</span>
+                                <span class="txt normal">산업별 심화실무 교육 등</span>
+                            </li>
+                        </ul>
+                        <ul class="box-radius">
+                            <li>
+                                <span class="label">맞춤형 프로그램</span>
+                                <span class="txt">전직·재창업</span>
+                            </li>
+                            <li>
+                                <span class="label">연령층</span>
+                                <span class="txt">고령층</span>
+                            </li>
+                            <li>
+                                <span class="label">대상자</span>
+                                <span class="txt">퇴직자</span>
+                            </li>
+                            <li>
+                                <span class="label">주요 교육내용</span>
+                                <span class="txt normal">방제 드론, 실버IT, 창업 등</span>
+                            </li>
+                        </ul>
+                        <ul class="box-radius">
+                            <li>
+                                <span class="label">맞춤형 프로그램</span>
+                                <span class="txt">조직적응형</span>
+                            </li>
+                            <li>
+                                <span class="label">연령층</span>
+                                <span class="txt">청년층</span>
+                            </li>
+                            <li>
+                                <span class="label">대상자</span>
+                                <span class="txt">신규 입직자</span>
+                            </li>
+                            <li>
+                                <span class="label">주요 교육내용</span>
+                                <span class="txt normal">직무기초, 협업 능력 등</span>
+                            </li>
+                        </ul>
+                        <ul class="box-radius">
+                            <li>
+                                <span class="label">맞춤형 프로그램</span>
+                                <span class="txt">실무연결형</span>
+                            </li>
+                            <li>
+                                <span class="label">연령층</span>
+                                <span class="txt">전(全)세대</span>
+                            </li>
+                            <li>
+                                <span class="label">대상자</span>
+                                <span class="txt">저소득층 등</span>
+                            </li>
+                            <li>
+                                <span class="label">주요 교육내용</span>
+                                <span class="txt normal">실습중심 직무훈련 등</span>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </section>
