--- a/01_사업소개_05_협력기관소개.html
+++ b/01_사업소개_05_협력기관소개.html
@@ -158,73 +158,79 @@
                         <a href="#">사업소개</a>
                     </li>
                     <li>
-                        <a href="./index.html">과제목표 및 추진전략</a>
+                        <a href="./index.html">협력기관 소개</a>
                     </li>
                 </ol>
             </div>
             <section class="inner-wrap business-cont">
-                <h2 class="h2-title">과제목표 및 추진전략</h2>
+                <h2 class="h2-title">협력기관 소개</h2>
                 <div class="inner">
-                    <span class="box-visual"></span>
-                    <div class="box-radius cont">
-                        <p class="txt-intro">
-                            지역 인구 감소 문제 해결, 지역경제 활력을 되찾기 위해,<span class="br-mo"></span>
-                            청년층 고용 확대와 지역 정착 유도, 중장년층이 정주할 수 있는 환경 조성추진
-                        </p>
-                        <ul class="list-diagram">
-                            <li>
-                                <strong class="tit">지역산업 <span class="br-mo"></span>성장동력 강화</strong>
-                                <b class="emphasis">지역 소멸 위기 대응</b>
-                                <span class="txt">지역산업 성장으로 <br>청년 인구 증가와 경제 활성화</span>
-                            </li>
-                            <li>
-                                <strong class="tit">지역수요 맞춤형 <span class="br-mo"></span>인재 양성</strong>
-                                <b class="emphasis">지역 산업 수요 대응</b>
-                                <span class="txt">지역 산업체 인력수요 불일치 <br>해소를 위한 교육과정 개선</span>
-                            </li>
-                            <li>
-                                <strong class="tit">지역 정주환경 <span class="br-mo"></span>개선</strong>
-                                <b class="emphasis">지역 정주 여건 개선</b>
-                                <span class="txt">지역 내 취업 및 정주로 <br>이어지는 선순환 구조 마련</span>
-                            </li>
-                        </ul>
-                        <h3 class="icon-sub-tit">추진전략</h3>
-                        <p class="box-radius shadow">생애주기별 직무교육과 AI기반 학습을 통해 지역맞춤형 평생직업교육체계 구축</p>
-                        <div class="box-area col-2">
-                            <div class="box-radius tit">
-                                <h4 class="tit">중소ㆍ중견기업 재직자 교육</h4>
-                                <div class="box-area col-2">
-                                    <dl class="list-dot">
-                                        <dt>지속가능</dt>
-                                        <dd>지역 거버넌스</dd>
-                                        <dd>사회적 이슈 교육</dd>
-                                        <dd>평생학습 생태계</dd>
-                                    </dl>
-                                    <dl class="list-dot">
-                                        <dt>AIㆍ디지털</dt>
-                                        <dd>AI기반 교육</dd>
-                                        <dd>디지털기반 교육</dd>
-                                        <dd>스마트 융합교육</dd>
-                                    </dl>
-                                </div>
-                            </div>
-                            <div class="box-radius tit">
-                                <h4 class="tit">취약계층 입직 희망자 교육</h4>
-                                <div class="box-area col-2">
-                                    <dl class="list-dot">
-                                        <dt>생애주기</dt>
-                                        <dd>입직자 교육</dd>
-                                        <dd>재직자 교육</dd>
-                                        <dd>이·전직 교육</dd>
-                                    </dl>
-                                    <dl class="list-dot">
-                                        <dt>지역맞춤</dt>
-                                        <dd>충남 전략사업</dd>
-                                        <dd>수요맞춤형</dd>
-                                        <dd>직업교육 고도화</dd>
-                                    </dl>
-                                </div>
-                            </div>
+                    <div class="box-area col-3 col-type-wrap list-partner">
+                        <div class="box-radius">
+                            <em class="logo"><img src="./images/common/logo_03.png" alt="천안시"></em>
+                            <strong class="tit">천안시 평생교육기관</strong>
+                            <p class="desc">
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                            </p>
+                        </div>
+                        <div class="box-radius">
+                            <em class="logo"><img src="./images/common/logo_02.png" alt="충청남도"></em>
+                            <strong class="tit">충남도 평생교육기관</strong>
+                            <p class="desc">
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                            </p>
+                        </div>
+                        <div class="box-radius">
+                            <em class="logo"><img src="./images/common/logo_01.png" alt="고용노동부"></em>
+                            <strong class="tit">고용노동부</strong>
+                            <p class="desc">
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                            </p>
+                        </div>
+                        <div class="box-radius">
+                            <em class="logo"><img src="./images/common/logo_03.png" alt="천안시"></em>
+                            <strong class="tit">천안시 평생교육기관</strong>
+                            <p class="desc">
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                            </p>
+                        </div>
+                        <div class="box-radius">
+                            <em class="logo"><img src="./images/common/logo_02.png" alt="충청남도"></em>
+                            <strong class="tit">충남도 평생교육기관</strong>
+                            <p class="desc">
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                            </p>
+                        </div>
+                        <div class="box-radius">
+                            <em class="logo"><img src="./images/common/logo_01.png" alt="고용노동부"></em>
+                            <strong class="tit">고용노동부</strong>
+                            <p class="desc">
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                                협력기관 소개의 내용을 추가해주세요
+                            </p>
                         </div>
                     </div>
                 </div>
