--- a/01_사업소개_04_추진일정.html
+++ b/01_사업소개_04_추진일정.html
@@ -158,75 +158,72 @@
                         <a href="#">사업소개</a>
                     </li>
                     <li>
-                        <a href="./index.html">과제목표 및 추진전략</a>
+                        <a href="./index.html">추진일정</a>
                     </li>
                 </ol>
             </div>
             <section class="inner-wrap business-cont">
-                <h2 class="h2-title">과제목표 및 추진전략</h2>
+                <h2 class="h2-title">추진일정</h2>
                 <div class="inner">
-                    <span class="box-visual"></span>
-                    <div class="box-radius cont">
-                        <p class="txt-intro">
-                            지역 인구 감소 문제 해결, 지역경제 활력을 되찾기 위해,<span class="br-mo"></span>
-                            청년층 고용 확대와 지역 정착 유도, 중장년층이 정주할 수 있는 환경 조성추진
-                        </p>
-                        <ul class="list-diagram">
-                            <li>
-                                <strong class="tit">지역산업 <span class="br-mo"></span>성장동력 강화</strong>
-                                <b class="emphasis">지역 소멸 위기 대응</b>
-                                <span class="txt">지역산업 성장으로 <br>청년 인구 증가와 경제 활성화</span>
-                            </li>
-                            <li>
-                                <strong class="tit">지역수요 맞춤형 <span class="br-mo"></span>인재 양성</strong>
-                                <b class="emphasis">지역 산업 수요 대응</b>
-                                <span class="txt">지역 산업체 인력수요 불일치 <br>해소를 위한 교육과정 개선</span>
-                            </li>
-                            <li>
-                                <strong class="tit">지역 정주환경 <span class="br-mo"></span>개선</strong>
-                                <b class="emphasis">지역 정주 여건 개선</b>
-                                <span class="txt">지역 내 취업 및 정주로 <br>이어지는 선순환 구조 마련</span>
-                            </li>
-                        </ul>
-                        <h3 class="icon-sub-tit">추진전략</h3>
-                        <p class="box-radius shadow">생애주기별 직무교육과 AI기반 학습을 통해 지역맞춤형 평생직업교육체계 구축</p>
-                        <div class="box-area col-2">
-                            <div class="box-radius tit">
-                                <h4 class="tit">중소ㆍ중견기업 재직자 교육</h4>
-                                <div class="box-area col-2">
-                                    <dl class="list-dot">
-                                        <dt>지속가능</dt>
-                                        <dd>지역 거버넌스</dd>
-                                        <dd>사회적 이슈 교육</dd>
-                                        <dd>평생학습 생태계</dd>
-                                    </dl>
-                                    <dl class="list-dot">
-                                        <dt>AIㆍ디지털</dt>
-                                        <dd>AI기반 교육</dd>
-                                        <dd>디지털기반 교육</dd>
-                                        <dd>스마트 융합교육</dd>
-                                    </dl>
-                                </div>
-                            </div>
-                            <div class="box-radius tit">
-                                <h4 class="tit">취약계층 입직 희망자 교육</h4>
-                                <div class="box-area col-2">
-                                    <dl class="list-dot">
-                                        <dt>생애주기</dt>
-                                        <dd>입직자 교육</dd>
-                                        <dd>재직자 교육</dd>
-                                        <dd>이·전직 교육</dd>
-                                    </dl>
-                                    <dl class="list-dot">
-                                        <dt>지역맞춤</dt>
-                                        <dd>충남 전략사업</dd>
-                                        <dd>수요맞춤형</dd>
-                                        <dd>직업교육 고도화</dd>
-                                    </dl>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <ul class="list-bubble">
+                        <li>
+                            <span class="box-bubble">
+                                수요조사 및 생애군별 <span class="br-mo"></span>교육모델 설계
+                            </span>
+                            <span class="box-year">1차년도</span>
+                        </li>
+                        <li>
+                            <span class="box-bubble">
+                                시범과정 운영 및 <span class="br-mo"></span>프로그램 정비
+                            </span>
+                            <span class="box-year">2차년도</span>
+                        </li>
+                        <li>
+                            <span class="box-bubble">
+                                본격 운영 및 <span class="br-mo"></span>참여자군 확대
+                            </span>
+                            <span class="box-year">3차년도</span>
+                        </li>
+                        <li>
+                            <span class="box-bubble">
+                                성과 분석 기반 <span class="br-mo"></span>프로그램 고도화
+                            </span>
+                            <span class="box-year">4차년도</span>
+                        </li>
+                        <li>
+                            <span class="box-bubble">
+                                경력 전환성과 추적 및 <span class="br-mo"></span>사례화 체계 구축
+                            </span>
+                            <span class="box-year">5차년도</span>
+                        </li>
+                    </ul>
+                    <h3 class="icon-sub-tit">1차년도 추진계획</h3>
+                    <ul class="box-radius list-year">
+                        <li>
+                            <span class="date">25년6월~7월</span>
+                            <span class="txt">재직자 및 취약계층 맞춤형교육 수요 조사</span>
+                        </li>
+                        <li>
+                            <span class="date">25년7월~8월</span>
+                            <span class="txt">충남 특화산업 재직자 맞춤교육 프로그램 개발</span>
+                        </li>
+                        <li>
+                            <span class="date">25년8월~26년1월</span>
+                            <span class="txt">충남 특화산업 재직자 맞춤교육 시행</span>
+                        </li>
+                        <li>
+                            <span class="date">25년7월~8월</span>
+                            <span class="txt">취약계층 충남 특화산업 맞춤교육 프로그램 개발</span>
+                        </li>
+                        <li>
+                            <span class="date">25년9월~26년2월</span>
+                            <span class="txt">취약계층 충남 특화산업 맞춤교육 시행</span>
+                        </li>
+                        <li>
+                            <span class="date">25년6월~26년2월</span>
+                            <span class="txt">재직자 및 취약계층 맞춤형교육 성과 모니터링 및 성과보고</span>
+                        </li>
+                    </ul>
                 </div>
             </section>
         </main>
