--- a/01_사업소개_06_파트너십안내.html
+++ b/01_사업소개_06_파트너십안내.html
@@ -158,75 +158,45 @@
                         <a href="#">사업소개</a>
                     </li>
                     <li>
-                        <a href="./index.html">과제목표 및 추진전략</a>
+                        <a href="./index.html">파트너십 안내</a>
                     </li>
                 </ol>
             </div>
             <section class="inner-wrap business-cont">
-                <h2 class="h2-title">과제목표 및 추진전략</h2>
+                <h2 class="h2-title">파트너십 안내</h2>
                 <div class="inner">
-                    <span class="box-visual"></span>
-                    <div class="box-radius cont">
-                        <p class="txt-intro">
-                            지역 인구 감소 문제 해결, 지역경제 활력을 되찾기 위해,<span class="br-mo"></span>
-                            청년층 고용 확대와 지역 정착 유도, 중장년층이 정주할 수 있는 환경 조성추진
-                        </p>
-                        <ul class="list-diagram">
-                            <li>
-                                <strong class="tit">지역산업 <span class="br-mo"></span>성장동력 강화</strong>
-                                <b class="emphasis">지역 소멸 위기 대응</b>
-                                <span class="txt">지역산업 성장으로 <br>청년 인구 증가와 경제 활성화</span>
-                            </li>
-                            <li>
-                                <strong class="tit">지역수요 맞춤형 <span class="br-mo"></span>인재 양성</strong>
-                                <b class="emphasis">지역 산업 수요 대응</b>
-                                <span class="txt">지역 산업체 인력수요 불일치 <br>해소를 위한 교육과정 개선</span>
-                            </li>
-                            <li>
-                                <strong class="tit">지역 정주환경 <span class="br-mo"></span>개선</strong>
-                                <b class="emphasis">지역 정주 여건 개선</b>
-                                <span class="txt">지역 내 취업 및 정주로 <br>이어지는 선순환 구조 마련</span>
-                            </li>
-                        </ul>
-                        <h3 class="icon-sub-tit">추진전략</h3>
-                        <p class="box-radius shadow">생애주기별 직무교육과 AI기반 학습을 통해 지역맞춤형 평생직업교육체계 구축</p>
-                        <div class="box-area col-2">
-                            <div class="box-radius tit">
-                                <h4 class="tit">중소ㆍ중견기업 재직자 교육</h4>
-                                <div class="box-area col-2">
-                                    <dl class="list-dot">
-                                        <dt>지속가능</dt>
-                                        <dd>지역 거버넌스</dd>
-                                        <dd>사회적 이슈 교육</dd>
-                                        <dd>평생학습 생태계</dd>
-                                    </dl>
-                                    <dl class="list-dot">
-                                        <dt>AIㆍ디지털</dt>
-                                        <dd>AI기반 교육</dd>
-                                        <dd>디지털기반 교육</dd>
-                                        <dd>스마트 융합교육</dd>
-                                    </dl>
-                                </div>
-                            </div>
-                            <div class="box-radius tit">
-                                <h4 class="tit">취약계층 입직 희망자 교육</h4>
-                                <div class="box-area col-2">
-                                    <dl class="list-dot">
-                                        <dt>생애주기</dt>
-                                        <dd>입직자 교육</dd>
-                                        <dd>재직자 교육</dd>
-                                        <dd>이·전직 교육</dd>
-                                    </dl>
-                                    <dl class="list-dot">
-                                        <dt>지역맞춤</dt>
-                                        <dd>충남 전략사업</dd>
-                                        <dd>수요맞춤형</dd>
-                                        <dd>직업교육 고도화</dd>
-                                    </dl>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                     <p class="intro-partnership">
+                        남서울대학교RISE 파트너십은 지역 혁신을 함께 이끌기 위한 개방형 협력 네트워크입니다. 기업, 대학, 연구기관, 지자체, 시민단체가 함께 참여하여 기술·데이터·인력·프로젝트를 공유하며 지역의 미래를 만듭니다.
+                     </p>
+                     <h3 class="icon-sub-tit">참여혜택</h3>
+                     <ol class="list-benefit">
+                        <li>
+                            <span class="num">01</span>
+                            <span class="txt">RISE 연계사업 <span class="br-mo"></span>우선 협력 기회</span>
+                        </li>
+                        <li>
+                            <span class="num">02</span>
+                            <span class="txt">충남혁신 네트워크 <span class="br-mo"></span>포럼 및 세미나 초청</span>
+                        </li>
+                        <li>
+                            <span class="num">03</span>
+                            <span class="txt">공동홍보 및 프로젝트 <span class="br-mo"></span>브랜드 노출</span>
+                        </li>
+                        <li>
+                            <span class="num">04</span>
+                            <span class="txt">지역혁신 리더 인증 및 <span class="br-mo"></span>추천제도</span>
+                        </li>
+                        <li>
+                            <span class="num">05</span>
+                            <span class="txt">기술/인력/데이터 <span class="br-mo"></span>매칭 지원</span>
+                        </li>
+                     </ol>
+                     <h3 class="icon-sub-tit">참여방법</h3>
+                     <p class="box-radius info-email">
+                        남서울대학교RISE 파트너십에 관심 있는 기관/기업/단체는 언제든 문의해주세요.<br>
+                        담당자가 직접 상담드리며 협력 가능 분야를 안내드립니다.
+                        <em class="email">이메일 문의  kigon@nsu.ac.kr</em>
+                     </p>
                 </div>
             </section>
         </main>
