교육프로그램 - AI직무 pub작업

--- a/02_교육프로그램_06_생성형AI 이해와 직무활용 교육_01_교육개요.html
+++ b/02_교육프로그램_06_생성형AI 이해와 직무활용 교육_01_교육개요.html
@@ -158,14 +158,14 @@
                         <a href="#">교육프로그램</a>
                     </li>
                     <li>
-                        <a href="./">장애인 직업교육</a>
+                        <a href="./">생성형AI 이해와 직무활용 교육</a>
                     </li>
                 </ol>
             </div>
             <section class="inner-wrap">
-                <h2 class="h2-title">장애인 직업교육</h2>
+                <h2 class="h2-title">생성형AI 이해와 직무활용 교육</h2>
 
-                <div class="tab-container sub has-img handicapped">
+                <div class="tab-container sub has-img create">
                         <ul class="tab-head">
                             <li><button type="button" class="tab-menu" data-tab="tab1-con1">교육개요</button></li>
                             <li><button type="button" class="tab-menu is-active" data-tab="tab1-con2">교육 프로그램 소개</button></li>
@@ -174,130 +174,99 @@
                         <div class="tab-content-wrap">
                             <div class="tab-content" id="tab1-con1">
                                 <p class="info-txt">
-                                    장애인 인식 개선 및 체육 스포츠 활동을 통한 장애인 문화향유권 보장과장애인 강사 수료증<br calss="pc-only">
-                                    지급을 통한 동기 부여 및 사회 적용력 강화, 충남지역 장애인의 건강한 삶 영위를 위한<br class="pc-only">
-                                    장애인 정주환경을 조성합니다.
+                                    GAI 기반 산업이 급속 융합 발전되고 있으나 지역 AI 활용도가 저조하고<br class="pc-only">
+                                    특히 소상공인은 자금, 인력 부족으로 AI 활용 미흡, 지역 AI 직무 활용교육으로<br class="pc-only">
+                                    산업경쟁력 제고, 지역 정주를 확대합니다.
                                 </p>
                                 <div class="inner">
                                     <h3 class="h3-title"><i class="ico icon-h3"></i>핵심목표</h3>
                                     <div class="wh-box">
-                                        <strong class="title">충남지역 장애인 ‘희망동행’ 정주환경 마련을 위한 “장애인인식개선/장애인스포츠 강사 직업교육 수행”</strong>
+                                        <strong class="title">AI 전개 대응 및 충남 지역 정주 생태계 조성을 위한 “ AI 이해 및 직무활용 교육 실시 ”</strong>
                                     </div>
                                 </div>
 
                                 <div class="inner">
                                     <h3 class="h3-title"><i class="ico icon-h3"></i>교육목표</h3>
-                                    <ul class="round-box">
+                                    <ul class="round-box type03">
                                         <li>
-                                            <div class="tit-grp"><b>문화예술 장애인 인식 개선 강사 양성</b></div>
-                                            <div class="txt-grp">
-                                                <p class="bullet">장애인 사회 참여 기회 확대</p>
-                                                <p class="bullet">강사 자격증 획득을 통한 동기 부여 및 사회 적응력 강화</p>
-                                                <p class="bullet">장애인의 건강한 삶 영위를 위한 환경 조성</p>
-                                            </div>
+                                            <div class="tit-grp"><b class="point">AI 기초 및 업무 적용</b></div>
+                                            <dl class="txt-grp">
+                                               <dt>AI 기초 이해 및 도구 활용</dt>
+                                               <dd>GAI 이해, 디지털리터러시향샹<br>(GAI, 프롬프트, AI윤리)</dd>
+                                               <dd>업무용 AI 도구실전 활용<br>(소상공인 직무용 AI 도구)</dd>
+                                               <dd>GAI의 업무 응용<br>(바이브코팅, 업무자동화 등)</dd> 
+                                            </dl>
                                         </li>
                                         <li>
-                                            <div class="tit-grp"><b>문화예술 스포츠 강사 인턴(3급) 양성</b></div>
-                                            <div class="txt-grp">
-                                                <p class="bullet">장애인의 건강한 삶 영위를 위한 환경 조성</p>
-                                                <p class="bullet">장애인 건강관리 강화</p>
-                                                <p class="bullet">체육 활동을 통한 장애인의 문화 향유권 보장</p>
-                                            </div>
+                                            <div class="tit-grp"><b class="point">AI 기반 업무/사업 혁신</b></div>
+                                            <dl class="txt-grp">
+                                               <dt>AI 기반 업무프로세스 혁신</dt>
+                                               <dd>AI 업무 자동화 및 최적화<br>(업무자동화, 고객데이터기반 마케팅)</dd>
+                                               <dd>AI 활용신규 비즈니스 개발<br>(디지털전환전략, 신사업모델발굴)</dd>
+                                               <dd>O2O 플랫폼 구축 지원<br>(온오프라인 연계, 플랫폼 비즈니스)</dd> 
+                                            </dl>
+                                        </li>
+                                        <li>
+                                            <div class="tit-grp"><b class="point">AI 기업응용 생태계 구축</b></div>
+                                            <dl class="txt-grp">
+                                               <dt>충남형 AI 산업 생태계</dt>
+                                               <dd>산학연 AI 네트워킹<br>(남서울대 중심 지역 AI 커뮤니티)</dd>
+                                               <dd>AI 전문가 양성 프로그램<br>(대학 교육 및 평생교육 프로그램)</dd>
+                                               <dd>AI 기술 공유 플랫폼<br>(클라우드, 엣지, 빅데이터)</dd> 
+                                            </dl>
                                         </li>
                                     </ul>
                                 </div>
                             </div>
                             <div class="tab-content is-active" id="tab1-con2">
                                 <p class="info-txt">
-                                    장애인 인식 개선 및 체육 스포츠 활동을 통한 장애인 문화향유권 보장과장애인 강사 수료증<br class="pc-only">
-                                    지급을 통한 동기 부여 및 사회 적용력 강화, 충남지역 장애인의 건강한 삶 영위를 위한<br class="pc-only">
-                                    장애인 정주환경을 조성합니다.
+                                    GAI 기반 산업이 급속 융합 발전되고 있으나 지역 AI 활용도가 저조하고<br class="pc-only">
+                                    특히 소상공인은 자금, 인력 부족으로 AI 활용 미흡, 지역 AI 직무 활용교육으로<br class="pc-only">
+                                    산업경쟁력 제고, 지역 정주를 확대합니다.
                                 </p>
 
                                 <div class="inner bg-wh">
                                     <dl class="bg-box">
                                         <dt>학습목표</dt>
                                         <dd>
-                                            충남지역 장애인 ‘희망동행’ 정주환경 마련을 위한 “장애인인식개선/장애인스포츠 강사 직업교육 수행”
+                                            2025년 1차년도 생성형AI 이해와 직무활용 교육으로 AI 이해와 도구 활용 역량을 제고하여 AI 직무 활용도 증대, 2026년부터 AI기반 직무 전문 교육, 기술 교육으로 AI 직무 전문가 양성 확대
                                         </dd>
                                     </dl>
 
-                                    <h4 class="h4-title">교육내용 및 구성</h4>
+                                    <h4 class="h4-title">교육내용 및 구성(25년 1차)</h4>
                                     <dl class="list-txt type02">
                                         <dt>교육과정</dt>
-                                        <dd><p class="point">문화예술 장애인 인식 개선 강사 양성 교육</p></dd>
+                                        <dd><p class="point">AI 직무 기초 과정</p></dd>
                                         <dt>주요내용</dt>
                                         <dd>
                                             <p>
-                                                1. 장애 감수성 인식<br>
-                                                &nbsp;&nbsp;· 장애인 감수성 이해 및 장애인 평견 해소<br>
-                                                2. 장애 유형 인식<br>
-                                                &nbsp;&nbsp;· 장애인 유형 이해 및 예술 연계 토론<br>
-                                                3. 장애 체육 인식<br>
-                                                &nbsp;&nbsp;· 장애인 정도에 따른 체육 활동 인식
+                                                1. 생성형 AI 개요 (이론)<br>
+                                                2. GAI 주요 플랫폼과 활용 도구(ChatGPT 등)<br>
+                                                3. 실무 생산성 향상(프롬프트, 문서/시트 활동 등)<br>
+                                                4. GAI 활용 실습(문서, 이미지 생성 등)
                                             </p>
-                                        </dd>
-                                        <dt>교육방식</dt>
-                                        <dd><p>이론 강의 + 사례 중심 강의</p></dd>
-                                        <dt>교육일정</dt>
-                                        <dd><p>-</p></dd>
-                                    </dl>
-                                    <dl class="list-txt type02">
-                                        <dt>교육과정</dt>
-                                        <dd><p class="point">문화예술 스포츠 강사 인턴(3급) 양성 교육</p></dd>
-                                        <dt>주요내용</dt>
-                                        <dd>
-                                            <p>
-                                                1. 장애인 편견 해소<br>
-                                                &nbsp;&nbsp;· 장애인 편견 해소 및 사회적 적응 방안 마련<br>
-                                                2. 장애 댄스 스포츠 강사 인턴과정(3급)<br>
-                                                &nbsp;&nbsp;· 지체, 시각, 청각 장애인별 스포츠 댄스 그룹 활동<br>
-                                                3. 장애 체육 댄스 체험<br>
-                                                &nbsp;&nbsp;· 저강도 댄스 및 중증 장애인 체험    
-                                            </p>
-                                        </dd>
-                                        <dt>교육방식</dt>
-                                        <dd><p>실습중심 강의</p></dd>
-                                        <dt>교육일정</dt>
-                                        <dd><p>-</p></dd>
-                                    </dl>
-                                    <dl class="list-txt type02">
-                                        <dt>교육과정</dt>
-                                        <dd><p class="point">(심화과정) 드론방제 심화교육</p></dd>
-                                        <dt>주요내용</dt>
-                                        <dd>
-                                            <p class="bullet">RTK 연결, 데이터 연동, 약제 분사 등 드론방제 활용 이해, 연동 장비 실습</p>
                                         </dd>
                                         <dt>교육방식</dt>
                                         <dd><p>이론 + 실습</p></dd>
                                         <dt>교육일정</dt>
                                         <dd><p>-</p></dd>
                                     </dl>
-
                                     <dl class="list-txt type02">
                                         <dt>교육과정</dt>
-                                        <dd><p class="point">(심화과정) 이지스팜 플랫폼 활용교육</p></dd>
+                                        <dd><p class="point">AI 직무 심화 과정</p></dd>
                                         <dt>주요내용</dt>
                                         <dd>
-                                            <p class="bullet">작업계획설정, 토지정보등록 및 측량, 작업 할당 및 모니터링, 방제 예측 분석 등 농업방제 시스템 활용 이해</p>
+                                            <p>
+                                                1. AI Agent 개요 (이론)<br>
+                                                2. AI assistance 만들기(바이브 코딩)<br>
+                                                3. 프롬프트 엔지니어링(데이터 구조, RPA 등)<br>
+                                                4. 데이터 처리 자동화 실무 방안
+                                            </p>
                                         </dd>
                                         <dt>교육방식</dt>
-                                        <dd><p>실습</p></dd>
+                                        <dd><p>이론 + 실습</p></dd>
                                         <dt>교육일정</dt>
-                                        <dd><p>-</p></dd>
-                                    </dl>
-
-                                    <dl class="list-txt type02">
-                                        <dt>교육과정</dt>
-                                        <dd><p class="point">(현장실습) 현장 방제 실습교육</p></dd>
-                                        <dt>주요내용</dt>
-                                        <dd>
-                                            <p class="bullet">농촌 현장(논/밭 등) 실습을 통한 조기 위험 식별, 노하우 습득, 결과 리포트 를 통한 실 방제 역량 습득</p>
-                                        </dd>
-                                        <dt>교육방식</dt>
-                                        <dd><p>실습</p></dd>
-                                        <dt>교육일정</dt>   
-                                        <dd><p>-</p></dd>
+                                        <dd><p>11월 17일(월)</p></dd>
                                     </dl>
                                 </div>
                             </div>
